--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1387,9 +1387,10 @@ audio {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  vertical-align: middle;
 }
 
-/* line 106, ../sass/_messages.scss */
+/* line 108, ../sass/_messages.scss */
 .at-username {
   display: inline-block;
   padding: 2px;
@@ -1397,14 +1398,14 @@ audio {
   color: #41441D;
 }
 
-/* line 114, ../sass/_messages.scss */
+/* line 116, ../sass/_messages.scss */
 pre {
   display: block;
   overflow-x: auto;
   overflow-y: auto;
 }
 
-/* line 120, ../sass/_messages.scss */
+/* line 122, ../sass/_messages.scss */
 code {
   display: block;
   white-space: pre;
@@ -1417,13 +1418,13 @@ code {
   border-radius: 3px;
 }
 
-/* line 132, ../sass/_messages.scss */
+/* line 134, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 137, ../sass/_messages.scss */
+/* line 139, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1443,7 +1444,7 @@ code {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
-/* line 160, ../sass/_messages.scss */
+/* line 162, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1455,11 +1456,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 172, ../sass/_messages.scss */
+/* line 174, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 178, ../sass/_messages.scss */
+/* line 180, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1470,21 +1471,21 @@ code {
   background-size: 100%;
 }
 
-/* line 188, ../sass/_messages.scss */
+/* line 190, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 194, ../sass/_messages.scss */
+/* line 196, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 201, ../sass/_messages.scss */
+/* line 203, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1492,14 +1493,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 207, ../sass/_messages.scss */
+/* line 209, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 214, ../sass/_messages.scss */
+/* line 216, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1507,12 +1508,12 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 221, ../sass/_messages.scss */
+/* line 223, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 224, ../sass/_messages.scss */
+/* line 226, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1528,7 +1529,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 251, ../sass/_messages.scss */
+/* line 253, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1536,66 +1537,66 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 258, ../sass/_messages.scss */
+  /* line 260, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 259, ../sass/_messages.scss */
+  /* line 261, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 262, ../sass/_messages.scss */
+  /* line 264, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 263, ../sass/_messages.scss */
+  /* line 265, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 266, ../sass/_messages.scss */
+  /* line 268, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 267, ../sass/_messages.scss */
+  /* line 269, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 270, ../sass/_messages.scss */
+  /* line 272, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 271, ../sass/_messages.scss */
+  /* line 273, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 274, ../sass/_messages.scss */
+  /* line 276, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 275, ../sass/_messages.scss */
+  /* line 277, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
-/* line 278, ../sass/_messages.scss */
+/* line 280, ../sass/_messages.scss */
 .typeahead {
   list-style-type: none;
   width: 100%;
@@ -1604,7 +1605,7 @@ code {
   border-radius: .5em;
   margin-top: 1.5em;
 }
-/* line 287, ../sass/_messages.scss */
+/* line 289, ../sass/_messages.scss */
 .typeahead li {
   position: relative;
   display: inline-block;
@@ -1618,21 +1619,21 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 289, ../sass/_messages.scss */
+/* line 291, ../sass/_messages.scss */
 .typeahead li a {
   text-decoration: none !important;
 }
-/* line 305, ../sass/_messages.scss */
+/* line 307, ../sass/_messages.scss */
 .typeahead li.active {
   background: white;
   background: #4591FF;
   opacity: 1;
 }
-/* line 310, ../sass/_messages.scss */
+/* line 312, ../sass/_messages.scss */
 .typeahead li.active .mention_username {
   color: white;
 }
-/* line 319, ../sass/_messages.scss */
+/* line 321, ../sass/_messages.scss */
 .typeahead .mention_image {
   position: absolute;
   height: 1.5em;
@@ -1642,7 +1643,7 @@ code {
   top: .25em;
   left: 1em;
 }
-/* line 328, ../sass/_messages.scss */
+/* line 330, ../sass/_messages.scss */
 .typeahead .mention_username {
   position: absolute;
   font-weight: bold;
