--- a/client/sass/_profile.scss
+++ b/client/sass/_profile.scss
@@ -51,7 +51,6 @@
 	overflow: hidden;
 	padding:1.5em;
 	list-style-type: none;
-
 }
 	.user-room {
 		display:inline-block;
@@ -63,6 +62,7 @@
 			border:1px solid #C9C9C9;
 			display: inline-block;
 			color: black;
+			text-decoration: none;
 		}
 	}
 
