--- a/client/views/room.html
+++ b/client/views/room.html
@@ -59,7 +59,7 @@
 			</ul>
 		{{/isolate}}
 
-		<a href="#mdc-modal" class="markdown-cheatsheet">Markdown Cheatsheet</a>
+		<a href="#tt-modal" class="tt-cheatsheet">Tips 'n' tricks</a>
 	</aside>
 	<div class="main">
 
@@ -71,6 +71,6 @@
 			{{>loginForm}}
 		{{/unless}}
 	</div>
-	{{>markdownCheatsheet}}
+	{{>tipstricks}}
 	<audio id="new_message" src="/audio/notif.mp3" preload="auto"></audio>
 </template>
