--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -7,7 +7,7 @@
 			<h6>No app to install</h6>
 			<h6>No signup required</h6>
 			<h6>Simple and uncluttered UI</h6>
-			<h6><a href="#mdc-modal">Markdown</a> support? hell yeah</h6>
+			<h6><a href="#tt-modal">Markdown</a> support? hell yeah</h6>
 			<h6>Uh! I almost forgot: it's <a style='color:#222;' target='_blank' href="https://github.com/christian-fei/opentalk.me">opensource</a></h6>
 		</div>
 	</section>
@@ -60,7 +60,7 @@
 			<div class="tile">
 				<div class="vam">
 					<img src="/images/speech-bubble.png">
-					<h6><a href="#mdc-modal">Markdown</a></h6>
+					<h6><a href="#tt-modal">Markdown</a></h6>
 					<span>if you're into that thing</span>
 				</div>
 			</div>
@@ -109,7 +109,7 @@
 			<ul>
 				<li><strike>Enhanced <a href="/profile">profile page</a></strike></li>
 				<li>Let users delete their messages (on the way)</li>
-				<li><strike>Better <a href="#mdc-modal">Markdown</a> support</strike></li>
+				<li><strike>Better <a href="#tt-modal">Markdown</a> support</strike></li>
 				<li>Settings panel</li>
 				<li>emoji support as <a href="https://github.com/christian-fei/opentalk.me/issues/4">requested</a></li>
 				<li>Code highlighting?</li>
@@ -164,5 +164,5 @@
 			
 		</div>
 	</footer>
-	{{>markdownCheatsheet}}
+	{{>tipstricks}}
 </template>
