--- a/client/sass/_general.scss
+++ b/client/sass/_general.scss
@@ -10,9 +10,9 @@ html{
 	overflow-x:hidden;
 }
 @media screen and (-webkit-min-device-pixel-ratio:0){
-	::-webkit-scrollbar{width:.7em;background:#fff;} 
-	::-webkit-scrollbar-track{background-color: #999;} 
-	::-webkit-scrollbar-thumb{border-radius: 12px;background-color: rgba(0,0,0,0.2); }
+	::-webkit-scrollbar{width:.5em!important;background:#fff;} 
+	::-webkit-scrollbar-track{background-color: #ccc;} 
+	::-webkit-scrollbar-thumb{border-radius: 4px;background-color: rgba(0,0,0,0.2); }
 }
 ::selection{background:$color-main;color:inherit;}
 ::-moz-selection{background:$color-main;color:inherit;}
