--- a/client/views/tipstricks.html
+++ b/client/views/tipstricks.html
@@ -39,7 +39,7 @@
 	        			<td>:'(</td><td><span class="emojify sob"></span></td>
 	        		</tr>
 	        		<tr>
-	        			<td>:\</td><td><span class="emojify kissing_heart"></span></td>
+	        			<td>:*</td><td><span class="emojify kissing_heart"></span></td>
 	        		</tr>
 	        		<tr>
 	        			<td>;)</td><td><span class="emojify wink"></span></td>
@@ -59,7 +59,6 @@
 	        		<tr>
 	        			<td>&lt;/3</td><td><span class="emojify broken_heart"></span></td>
 	        		</tr>
-
 	        	</table>
 
 	        	<br>
