--- a/client/views/selectChatRoom.html
+++ b/client/views/selectChatRoom.html
@@ -1,3 +1,3 @@
 <template name='selectChatRoom'>
-	<input type='text' id='roomid' placeholder='enter room'/>
+	<input type='text' id='roomid' placeholder='enter room' tabindex='1'/>
 </template>
