--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -26,7 +26,9 @@
 			</div>
 		</div>
 	</section>
-	{{>mystats}}
+	{{#if currentUser}}
+		{{>mystats}}
+	{{/if}}
 	{{#unless currentUser}}
 	<section class="tiles">
 		<div class="tiles-wrapper">
