fix for online users

--- a/client/views/room.html
+++ b/client/views/room.html
@@ -59,6 +59,7 @@
 			</ul>
 		{{/isolate}}
 
+		<a href="#settings-modal" class="settings-modal">Settings</a>
 		<a href="#tt-modal" class="tt-cheatsheet">Tips 'n' tricks</a>
 	</aside>
 	<div class="main">
