--- a/client/views/tipstricks.html
+++ b/client/views/tipstricks.html
@@ -2,7 +2,7 @@
 	<section class="semantic-content" id="tt-modal" tabindex="-1" role="dialog" aria-labelledby="tt-modal" aria-hidden="true">
 	    <div class="modal-inner">
 	        <header id="modal-label" class='modal-header'>
-	        	<h3>Tips 'n' tricks</h3>
+	        	<h3>Manual</h3>
 	        </header>
 	        <div class="modal-content">
 	        	<h2>Smileys</h2>
