--- a/client/sass/_icons.scss
+++ b/client/sass/_icons.scss
@@ -2,6 +2,11 @@
 	display:inline-block;
 	height:1em;
 	width:1em;
+	background-size:100%!important; //to override background
+	height: 1.3em;
+	width: 1.3em;
+	margin-top: -.325em;
+	margin-bottom: -.325em;
 }
 .icon-arrow{
 	background:url('/images/arrow.png') no-repeat;
@@ -18,30 +23,21 @@
 	-ms-transform:rotateZ(0deg);
 	transform:rotateZ(0deg);
 }
-.icon-logout{
+.icon-signout{
 	background:url('/images/logout.png') no-repeat;
-	background-size:100%;
-	height: 1.3em;
-	width: 1.3em;
-	margin-top: -.325em;
-	margin-bottom: -.325em;
 	margin-left:.325em;
 }
 .icon-realtime{
 	background:url('/images/realtime.png') no-repeat;
-	background-size:100%;
-	height: 1.3em;
-	width: 1.3em;
-	margin-top: -.325em;
-	margin-bottom: -.325em;
 }
 .icon-profile{
 	background:url('/images/avatar.png') no-repeat;
-	background-size:100%;
-	height: 1.3em;
-	width: 1.3em;
-	margin-top: -.325em;
-	margin-bottom: -.325em;
+}
+.icon-settings{
+	background:url('/images/settings.png') no-repeat;
+}
+.icon-reference{
+	background:url('/images/reference.png') no-repeat;
 }
 
 
