--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -152,11 +152,13 @@
 			padding:.4em;
 			border-radius:5px;
 
-			-webkit-transition: all .2s ease-in-out;
-			-moz-transition: all .2s ease-in-out;
-			-ms-transition: all .2s ease-in-out;
-			-o-transition: all .2s ease-in-out;
-			transition: all .2s ease-in-out;
+			-webkit-transition: all 0.1s ease-in-out;
+			-moz-transition: all 0.1s ease-in-out;
+			-ms-transition: all 0.1s ease-in-out;
+			-o-transition: all 0.1s ease-in-out;
+			transition: all 0.1s ease-in-out;
+
+			// @extend .fly-in-down;
 
 
 			&:after {
