--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -114,14 +114,14 @@
 			<br>
 			<ul>
 				<li><strike>Enhanced <a href="/profile">profile page</a></strike></li>
-				<li>Let users delete their messages (on the way)</li>
+				<li><strike>Let users delete their messages (on the way)</strike></li>
 				<li><strike>Better <a href="#tt-modal">Markdown</a> support</strike></li>
-				<li>Settings panel</li>
-				<li>emoji support as <a href="https://github.com/christian-fei/opentalk.me/issues/4">requested</a></li>
+				<li><strike>Settings panel</strike></li>
 				<li>Code highlighting?</li>
-				<li>Implement notification system logic</li>
+				<li><strike>emoji support as <a href="https://github.com/christian-fei/opentalk.me/issues/4">requested</a></strike></li>
 				<li><strike>Tagging of chatrooms</strike></li>
 				<li><strike>Search for interesting chatroom based on tags</strike></li>
+				<li>Implement notification system logic</li>
 				<li><strike>Global stats</strike></li>
 				<li><strike>@username reply</strike></li>
 				<li><strike>fix security issues</strike></li>
