--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -163,7 +163,7 @@
 				</p>
 				<br><br>
 				<p>Special thanks to:</p>
-				<p><a href="https://twitter.com/TimPietrusky">@TimPietrusky</a> &middot; <a href="https://twitter.com/Francext">@Francext </a> &middot; <a href="https://twitter.com/lrsbck">@lrsbck</a> &middot; <a href="https://twitter.com/EddHere">@EddHere</a> &middot; <a href="https://twitter.com/LukyVJ">@LukyVJ</a> &middot; <a href="https://twitter.com/CrocoDillon">@CrocoDillon</a> &middot; <a href="https://twitter.com/SaraSoueidan">@SaraSoueidan</a> &middot; <a href="https://twitter.com/DerVonDenBergen">@DerVonDenBergen</a> &middot; <a href="https://twitter.com/jshawl">@jshawl</a> &middot; <a href="https://twitter.com/_kevinatari">@_kevinatari</a> and all the other awesome contributors</p>
+				<p><a href="https://twitter.com/grigi0">@grigi0</a> &middot; <a href="https://twitter.com/TimPietrusky">@TimPietrusky</a> &middot; <a href="https://twitter.com/Francext">@Francext </a> &middot; <a href="https://twitter.com/lrsbck">@lrsbck</a> &middot; <a href="https://twitter.com/EddHere">@EddHere</a> &middot; <a href="https://twitter.com/LukyVJ">@LukyVJ</a> &middot; <a href="https://twitter.com/CrocoDillon">@CrocoDillon</a> &middot; <a href="https://twitter.com/SaraSoueidan">@SaraSoueidan</a> &middot; <a href="https://twitter.com/DerVonDenBergen">@DerVonDenBergen</a> &middot; <a href="https://twitter.com/jshawl">@jshawl</a> &middot; <a href="https://twitter.com/_kevinatari">@_kevinatari</a> and all the other awesome contributors</p>
 			</p>
 			<br>
 			<br>
