--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 *  html5 doctor css reset | http://html5doctor.com/html-5-reset-stylesheet
 */
@@ -1557,12 +1558,27 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 225, ../sass/_messages.scss */
+/* line 226, ../sass/_messages.scss */
+.timestamp-text {
+  text-align: center;
+  font-size: .8em;
+  color: #857F7F;
+  margin: .8em 0 1.8em;
+}
+/* line 232, ../sass/_messages.scss */
+.timestamp-text::after {
+  content: '↑';
+  height: 1em;
+  width: 1em;
+  margin-left: .5em;
+}
+
+/* line 240, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 228, ../sass/_messages.scss */
+/* line 243, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1578,7 +1594,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 255, ../sass/_messages.scss */
+/* line 270, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1586,66 +1602,66 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 262, ../sass/_messages.scss */
+  /* line 277, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 263, ../sass/_messages.scss */
+  /* line 278, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 266, ../sass/_messages.scss */
+  /* line 281, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 267, ../sass/_messages.scss */
+  /* line 282, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 270, ../sass/_messages.scss */
+  /* line 285, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 271, ../sass/_messages.scss */
+  /* line 286, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 274, ../sass/_messages.scss */
+  /* line 289, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 275, ../sass/_messages.scss */
+  /* line 290, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 278, ../sass/_messages.scss */
+  /* line 293, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 279, ../sass/_messages.scss */
+  /* line 294, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
-/* line 282, ../sass/_messages.scss */
+/* line 297, ../sass/_messages.scss */
 .typeahead {
   list-style-type: none;
   width: 100%;
@@ -1654,7 +1670,7 @@ code {
   border-radius: .5em;
   margin-top: 1.5em;
 }
-/* line 291, ../sass/_messages.scss */
+/* line 306, ../sass/_messages.scss */
 .typeahead li {
   position: relative;
   display: inline-block;
@@ -1668,21 +1684,21 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 293, ../sass/_messages.scss */
+/* line 308, ../sass/_messages.scss */
 .typeahead li a {
   text-decoration: none !important;
 }
-/* line 309, ../sass/_messages.scss */
+/* line 324, ../sass/_messages.scss */
 .typeahead li.active {
   background: white;
   background: #4591FF;
   opacity: 1;
 }
-/* line 314, ../sass/_messages.scss */
+/* line 329, ../sass/_messages.scss */
 .typeahead li.active .mention_username {
   color: white;
 }
-/* line 323, ../sass/_messages.scss */
+/* line 338, ../sass/_messages.scss */
 .typeahead .mention_image {
   position: absolute;
   height: 1.5em;
@@ -1692,7 +1708,7 @@ code {
   top: .25em;
   left: 1em;
 }
-/* line 332, ../sass/_messages.scss */
+/* line 347, ../sass/_messages.scss */
 .typeahead .mention_username {
   position: absolute;
   font-weight: bold;
