better welcome screen

--- a/client/sass/_blanket.scss
+++ b/client/sass/_blanket.scss
@@ -5,7 +5,7 @@
 	width: 93%;
 	padding:1.5em;
 	box-shadow: 3px 3px 25px lightgrey;
-	margin: 2.5em auto;
+	margin: 1em auto 2em;
 	border-radius: 5px;
 	border: 1px solid lightgrey;
 	background:url('/images/pattern-black-w.png');
