--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -118,6 +118,9 @@
 			// width: 100%;
 			overflow-x: auto;
 			overflow-y: auto;
+			word-break: normal; //dam shit
+
+
 		}
 		code{
 			display: block;
