--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1453,9 +1453,10 @@ pre {
   display: block;
   overflow-x: auto;
   overflow-y: auto;
+  word-break: normal;
 }
 
-/* line 122, ../sass/_messages.scss */
+/* line 125, ../sass/_messages.scss */
 code {
   display: block;
   white-space: pre;
@@ -1468,13 +1469,13 @@ code {
   border-radius: 3px;
 }
 
-/* line 134, ../sass/_messages.scss */
+/* line 137, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 139, ../sass/_messages.scss */
+/* line 142, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1494,7 +1495,7 @@ code {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 164, ../sass/_messages.scss */
+/* line 167, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1506,11 +1507,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 176, ../sass/_messages.scss */
+/* line 179, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 182, ../sass/_messages.scss */
+/* line 185, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1521,21 +1522,21 @@ code {
   background-size: 100%;
 }
 
-/* line 192, ../sass/_messages.scss */
+/* line 195, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 198, ../sass/_messages.scss */
+/* line 201, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 205, ../sass/_messages.scss */
+/* line 208, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1543,14 +1544,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 211, ../sass/_messages.scss */
+/* line 214, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 218, ../sass/_messages.scss */
+/* line 221, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1558,14 +1559,14 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 226, ../sass/_messages.scss */
+/* line 229, ../sass/_messages.scss */
 .timestamp-text {
   text-align: center;
   font-size: .8em;
   color: #857F7F;
   margin: .8em 0 1.8em;
 }
-/* line 232, ../sass/_messages.scss */
+/* line 235, ../sass/_messages.scss */
 .timestamp-text::after {
   content: '↑';
   height: 1em;
@@ -1573,12 +1574,12 @@ code {
   margin-left: .5em;
 }
 
-/* line 240, ../sass/_messages.scss */
+/* line 243, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 243, ../sass/_messages.scss */
+/* line 246, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1594,7 +1595,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 270, ../sass/_messages.scss */
+/* line 273, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1602,66 +1603,66 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 277, ../sass/_messages.scss */
+  /* line 280, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 278, ../sass/_messages.scss */
+  /* line 281, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 281, ../sass/_messages.scss */
+  /* line 284, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 282, ../sass/_messages.scss */
+  /* line 285, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 285, ../sass/_messages.scss */
+  /* line 288, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 286, ../sass/_messages.scss */
+  /* line 289, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 289, ../sass/_messages.scss */
+  /* line 292, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 290, ../sass/_messages.scss */
+  /* line 293, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 293, ../sass/_messages.scss */
+  /* line 296, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 294, ../sass/_messages.scss */
+  /* line 297, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
-/* line 297, ../sass/_messages.scss */
+/* line 300, ../sass/_messages.scss */
 .typeahead {
   list-style-type: none;
   width: 100%;
@@ -1670,7 +1671,7 @@ code {
   border-radius: .5em;
   margin-top: 1.5em;
 }
-/* line 306, ../sass/_messages.scss */
+/* line 309, ../sass/_messages.scss */
 .typeahead li {
   position: relative;
   display: inline-block;
@@ -1684,21 +1685,21 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 308, ../sass/_messages.scss */
+/* line 311, ../sass/_messages.scss */
 .typeahead li a {
   text-decoration: none !important;
 }
-/* line 324, ../sass/_messages.scss */
+/* line 327, ../sass/_messages.scss */
 .typeahead li.active {
   background: white;
   background: #4591FF;
   opacity: 1;
 }
-/* line 329, ../sass/_messages.scss */
+/* line 332, ../sass/_messages.scss */
 .typeahead li.active .mention_username {
   color: white;
 }
-/* line 338, ../sass/_messages.scss */
+/* line 341, ../sass/_messages.scss */
 .typeahead .mention_image {
   position: absolute;
   height: 1.5em;
@@ -1708,7 +1709,7 @@ code {
   top: .25em;
   left: 1em;
 }
-/* line 347, ../sass/_messages.scss */
+/* line 350, ../sass/_messages.scss */
 .typeahead .mention_username {
   position: absolute;
   font-weight: bold;
@@ -1908,24 +1909,6 @@ html {
   overflow-x: hidden;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  /* line 13, ../sass/_general.scss */
-  ::-webkit-scrollbar {
-    width: 0.5em !important;
-    background: #fff;
-  }
-
-  /* line 14, ../sass/_general.scss */
-  ::-webkit-scrollbar-track {
-    background-color: #ccc;
-  }
-
-  /* line 15, ../sass/_general.scss */
-  ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-}
 /* line 17, ../sass/_general.scss */
 ::selection {
   background: #ffbb00;
@@ -1936,15 +1919,6 @@ html {
 ::-moz-selection {
   background: #ffbb00;
   color: inherit;
-}
-
-/* line 21, ../sass/_general.scss */
-.debug {
-  position: fixed;
-  top: 0;
-  right: 0;
-  background: rgba(255, 255, 255, 0.5);
-  max-width: 15em;
 }
 
 /* line 1, ../sass/_loginButtons.scss */
@@ -2399,7 +2373,7 @@ html {
   width: 93%;
   padding: 1.5em;
   box-shadow: 3px 3px 25px lightgrey;
-  margin: 2.5em auto;
+  margin: 1em auto 2em;
   border-radius: 5px;
   border: 1px solid lightgrey;
   background: url("/images/pattern-black-w.png");
