--- a/client/sass/_general.scss
+++ b/client/sass/_general.scss
@@ -9,19 +9,10 @@ input{
 html{
 	overflow-x:hidden;
 }
-@media screen and (-webkit-min-device-pixel-ratio:0){
-	::-webkit-scrollbar{width:.5em!important;background:#fff;} 
-	::-webkit-scrollbar-track{background-color: #ccc;} 
-	::-webkit-scrollbar-thumb{border-radius: 4px;background-color: rgba(0,0,0,0.2); }
-}
+// @media screen and (-webkit-min-device-pixel-ratio:0){
+// 	::-webkit-scrollbar{width:.5em!important;background:#fff;} 
+// 	::-webkit-scrollbar-track{background-color: #ccc;} 
+// 	::-webkit-scrollbar-thumb{border-radius: 4px;background-color: rgba(0,0,0,0.2); }
+// }
 ::selection{background:$color-main;color:inherit;}
 ::-moz-selection{background:$color-main;color:inherit;}
-
-
-.debug{
-	position:fixed;
-	top:0;
-	right:0;
-	background:rgba(255,255,255,.5);
-	max-width: 15em;
-}
