--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -127,8 +127,8 @@
 			white-space: pre;
 			word-wrap: normal;
 			overflow: auto;
-			margin: 0 2px;
-			padding: 3px 5px 0;
+			// margin: 0 2px;
+			padding: 6px 6px 3px;
 			border: 1px solid #ddd;
 			background-color: #f8f8f8;
 			border-radius: 3px;
