--- a/client/views/settings.html
+++ b/client/views/settings.html
@@ -16,7 +16,7 @@
 	        	</div>
 	        	<br>
 	        	<div>
-	        		<span>Delete all my messages </span> <a href='#' id="removeMessages" class="button silver">Delete <span class="icon-signout"></span></a> <span class="success removeMessages">Success!</span>
+	        		<span>Delete <b>ALL</b> my messages </span> <a href='#' id="removeMessages" class="button silver">Delete <span class="icon-signout"></span></a> <span class="success removeMessages">Success!</span>
 	        	</div>
 	        	<br>
 	        </div>
