--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -103,6 +103,11 @@
 
 				vertical-align: middle;
 			}
+
+			&.deleted{
+				text-decoration: line-through;
+				color:#909090;
+			}
 		}
 
 		.at-username{
