--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1439,8 +1439,13 @@ audio {
   overflow: hidden;
   vertical-align: middle;
 }
+/* line 107, ../sass/_messages.scss */
+.message .text.deleted, .message p.deleted {
+  text-decoration: line-through;
+  color: #909090;
+}
 
-/* line 108, ../sass/_messages.scss */
+/* line 113, ../sass/_messages.scss */
 .at-username {
   display: inline-block;
   padding: 2px;
@@ -1448,7 +1453,7 @@ audio {
   color: #41441D;
 }
 
-/* line 116, ../sass/_messages.scss */
+/* line 121, ../sass/_messages.scss */
 pre {
   display: block;
   overflow-x: auto;
@@ -1456,7 +1461,7 @@ pre {
   word-break: normal;
 }
 
-/* line 125, ../sass/_messages.scss */
+/* line 130, ../sass/_messages.scss */
 code {
   display: block;
   white-space: pre;
@@ -1468,13 +1473,13 @@ code {
   border-radius: 3px;
 }
 
-/* line 137, ../sass/_messages.scss */
+/* line 142, ../sass/_messages.scss */
 .tip:hover .username {
   visibility: visible;
   opacity: 1;
 }
 
-/* line 142, ../sass/_messages.scss */
+/* line 147, ../sass/_messages.scss */
 .username {
   position: absolute;
   font-size: .9em;
@@ -1494,7 +1499,7 @@ code {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 167, ../sass/_messages.scss */
+/* line 172, ../sass/_messages.scss */
 .username:after {
   content: "";
   position: absolute;
@@ -1506,11 +1511,11 @@ code {
   border-left: .5em solid transparent;
 }
 
-/* line 179, ../sass/_messages.scss */
+/* line 184, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
 }
-/* line 185, ../sass/_messages.scss */
+/* line 190, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -1521,21 +1526,21 @@ code {
   background-size: 100%;
 }
 
-/* line 195, ../sass/_messages.scss */
+/* line 200, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 201, ../sass/_messages.scss */
+/* line 206, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 31em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 208, ../sass/_messages.scss */
+/* line 213, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -1543,14 +1548,14 @@ code {
   border-top: 1px solid lightgrey;
 }
 
-/* line 214, ../sass/_messages.scss */
+/* line 219, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 221, ../sass/_messages.scss */
+/* line 226, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1558,14 +1563,14 @@ code {
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 229, ../sass/_messages.scss */
+/* line 234, ../sass/_messages.scss */
 .timestamp-text {
   text-align: center;
   font-size: .8em;
   color: #857F7F;
   margin: .8em 0 1.8em;
 }
-/* line 235, ../sass/_messages.scss */
+/* line 240, ../sass/_messages.scss */
 .timestamp-text::after {
   content: '↑';
   height: 1em;
@@ -1573,12 +1578,12 @@ code {
   margin-left: .5em;
 }
 
-/* line 243, ../sass/_messages.scss */
+/* line 248, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 246, ../sass/_messages.scss */
+/* line 251, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1594,7 +1599,7 @@ code {
   overflow-y: hidden;
 }
 
-/* line 273, ../sass/_messages.scss */
+/* line 278, ../sass/_messages.scss */
 #first, #last {
   border: none;
   opacity: 0;
@@ -1602,66 +1607,66 @@ code {
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 280, ../sass/_messages.scss */
+  /* line 285, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 281, ../sass/_messages.scss */
+  /* line 286, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 284, ../sass/_messages.scss */
+  /* line 289, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 285, ../sass/_messages.scss */
+  /* line 290, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 288, ../sass/_messages.scss */
+  /* line 293, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 289, ../sass/_messages.scss */
+  /* line 294, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 292, ../sass/_messages.scss */
+  /* line 297, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 293, ../sass/_messages.scss */
+  /* line 298, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 296, ../sass/_messages.scss */
+  /* line 301, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 297, ../sass/_messages.scss */
+  /* line 302, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
-/* line 300, ../sass/_messages.scss */
+/* line 305, ../sass/_messages.scss */
 .typeahead {
   list-style-type: none;
   width: 100%;
@@ -1670,7 +1675,7 @@ code {
   border-radius: .5em;
   margin-top: 1.5em;
 }
-/* line 309, ../sass/_messages.scss */
+/* line 314, ../sass/_messages.scss */
 .typeahead li {
   position: relative;
   display: inline-block;
@@ -1684,21 +1689,21 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 311, ../sass/_messages.scss */
+/* line 316, ../sass/_messages.scss */
 .typeahead li a {
   text-decoration: none !important;
 }
-/* line 327, ../sass/_messages.scss */
+/* line 332, ../sass/_messages.scss */
 .typeahead li.active {
   background: white;
   background: #4591FF;
   opacity: 1;
 }
-/* line 332, ../sass/_messages.scss */
+/* line 337, ../sass/_messages.scss */
 .typeahead li.active .mention_username {
   color: white;
 }
-/* line 341, ../sass/_messages.scss */
+/* line 346, ../sass/_messages.scss */
 .typeahead .mention_image {
   position: absolute;
   height: 1.5em;
@@ -1708,7 +1713,7 @@ code {
   top: .25em;
   left: 1em;
 }
-/* line 350, ../sass/_messages.scss */
+/* line 355, ../sass/_messages.scss */
 .typeahead .mention_username {
   position: absolute;
   font-weight: bold;
